syntax = "proto3";

package internal.rpc.proto;

option go_package = "internal/rpc/proto";

message MetricMessage {
  string name = 1;
  string type = 2;
  optional uint64 counter = 3;
  optional double gauge = 4;
}

message UpdateMetricResponse {
  MetricMessage metric = 1;
  string error = 2;
}

service GoDevops {
  rpc UpdateMetric(MetricMessage) returns (UpdateMetricResponse);
}